set(EXEC_NAME "${PROJECT_NAME}_test_example_unqlite_demovfs")
set(Source_Files "unqlite_demovfs.c")
source_group("${EXEC_NAME} Source Files" FILES "${Source_Files}")
add_executable("${EXEC_NAME}" "${Source_Files}")
target_link_libraries("${EXEC_NAME}" PUBLIC ${UNQLITE_STATIC_LIB})
add_test(NAME "${EXEC_NAME}" COMMAND "${EXEC_NAME}")
